# Coterm

./: .env.example  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  apple-arm-release.sh  ct.py  install.sh  requirements.txt
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
src/: args.rs  coterm.rs  main.rs  structs.rs  utils.rs
