[package]
name = "coterm"
version = "0.2.1"
edition = "2021"
authors = ["Shakirul Hasan Khan <shakirulhkhan@gmail.com>"]
license = "GPL-3.0-only"
description = "Copilot for your terminal"
readme = "README.md"
homepage = "https://github.com/KhanShaheb34/Coterm"
repository = "https://github.com/KhanShaheb34/Coterm"
keywords = ["cli", "copilot", "terminal", "ai", "gpt3"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15.0"
dialoguer = "0.10.4"
colored = "2.0.0"
clap = { version = "4.2.4", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }